// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenuUser should render default element 1`] = `
<div
  className="small-user-layout"
>
  <div
    className="avatar-container"
  >
    <div
      className="avatar-outline"
    />
    <div
      className="avatar-inner"
    >
      <Avatar
        alt="user-name"
        color="auto"
        image="user-src"
        initials="user-initials"
        isAriaHidden={true}
        isDeceased={false}
      />
    </div>
  </div>
  <div
    className="info-container"
  >
    <div
      aria-hidden={true}
      className="name"
    >
      user-name
    </div>
    <div
      className="detail"
    >
      user-detail
    </div>
    <button
      className="drawer-menu-action-button"
      data-focus-styles-enabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      type="button"
    >
      Edit Photo
    </button>
  </div>
</div>
`;

exports[`DrawerMenuUser should render with large variant 1`] = `
<div
  className="large-user-layout"
>
  <div
    className="avatar-container"
  >
    <div
      className="avatar-outline"
    />
    <div
      className="avatar-inner"
    >
      <Avatar
        alt="user-name"
        color="auto"
        image="user-src"
        initials="user-initials"
        isAriaHidden={true}
        isDeceased={false}
      />
    </div>
  </div>
  <div
    className="info-container"
  >
    <div
      aria-hidden={true}
      className="name"
    >
      user-name
    </div>
    <div
      className="detail"
    >
      user-detail
    </div>
    <button
      className="drawer-menu-action-button"
      data-focus-styles-enabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      type="button"
    >
      Edit Photo
    </button>
  </div>
</div>
`;

exports[`DrawerMenuUser should render with small variant 1`] = `
<div
  className="small-user-layout"
>
  <div
    className="avatar-container"
  >
    <div
      className="avatar-outline"
    />
    <div
      className="avatar-inner"
    >
      <Avatar
        alt="user-name"
        color="auto"
        image="user-src"
        initials="user-initials"
        isAriaHidden={true}
        isDeceased={false}
      />
    </div>
  </div>
  <div
    className="info-container"
  >
    <div
      aria-hidden={true}
      className="name"
    >
      user-name
    </div>
    <div
      className="detail"
    >
      user-detail
    </div>
    <button
      className="drawer-menu-action-button"
      data-focus-styles-enabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      type="button"
    >
      Edit Photo
    </button>
  </div>
</div>
`;
